--- a/client/src/components/Styles/styles.css
+++ b/client/src/components/Styles/styles.css
@@ -1,10 +1,60 @@
 
 
+@media screen and (max-width: 600px) {
+  .home {
+    background-image: url('./alice-pasqual.jpg');
+    background-size: 100%;
+    height: auto;
+    width: 50px;
+    text-align: justify;
+  }
+  .debtForm {
+    background-image: url('./autum.jpg');
+    height: auto;
+    width: auto;
+    
+  }
+
+  .navBar {
+    background-color: blue;
+    height: 10px;
+    width: fit-content;
+  }
+}
+
+.navBar {
+  background-color: red;
+  height: 50px;
+  width: fit-content;
+}
+
+.home {
+  background-image: url('./alice-pasqual.jpg');
+  background-size: 100%;
+  height: 1250px;
+  width: 100%;
+  background-repeat: no-repeat;
+  text-align: center;
+}
+
 .appIntro {
- text-align: justify;
+ text-align: center;
+ margin: 20px;
 
 }
 
+
+.homeButtons {
+  text-align: center;
+  text-shadow: 3px;
+  background-color: clear;
+}
+
+.photoCred {
+ text-align: right;
+ color: whitesmoke;
+ text-shadow: black;
+}
 .dropdown {
   position: relative;
   display: inline-block;
@@ -24,7 +74,9 @@
   display: block;
 }
 
-.navBar {
- background-color: red;
- 
+.debtForm {
+  background-image: url('./autum.jpg');
+  height: 100%;
+  width: 100%;
+
 }
