--- a/client/src/components/Styles/styles.css
+++ b/client/src/components/Styles/styles.css
@@ -33,20 +33,24 @@
   background-size: 100%;
   height: 1250px;
   width: 100%;
+  color: white;
   background-repeat: no-repeat;
   text-align: center;
+  text-shadow: 3px, grey;
 }
+
 
 .appIntro {
  text-align: center;
- margin: 20px;
-
+ margin-top: 95px;
+ align-self: center;
 }
 
 
 .homeButtons {
   text-align: center;
   text-shadow: 3px;
+  margin-top: 135px;
   background-color: clear;
 }
 
@@ -54,6 +58,10 @@
  text-align: right;
  color: whitesmoke;
  text-shadow: black;
+}
+
+.yourInfo {
+  text-align: center;
 }
 .dropdown {
   position: relative;
